# bazel-demo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
backend/: BUILD.bazel  main.go
client/: BUILD.bazel  main.go
gateway/: BUILD.bazel  main.go
openapi/: calculator.swagger.json
proto/calculator/: BUILD.bazel  calculator.pb.go  calculator.pb.gw.go  calculator.proto  calculator_grpc.pb.go
